--- a/Testing iMeeting/Views/Venue/Index.cshtml
+++ b/Testing iMeeting/Views/Venue/Index.cshtml
@@ -1,15 +1,16 @@
-﻿@model IEnumerable<iMeeting.DAL.VenueModel>
-
+﻿
 @{
     ViewBag.Title = "Index";
 }
-<br />
+
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<hr />
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="clearTextBox()" style="float:right">
     <i class="fa fa-plus" aria-hidden="true"></i>
     Add New Room
 </button>
-
+<h4>Venue Management</h4>
+<hr />
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -19,117 +20,294 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-
-                @using (Html.BeginForm("Add", "Venue", FormMethod.Post))
-                {
-
+                <form>
                     <div class="form-group row">
+                        <input type="text" class="form-control" id="ID" hidden>
+
                         <label for="staticEmail" class="col-sm-2 col-form-label" style="font-weight:bold">Name</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="Name" placeholder="Enter Room Name" required>
+                            <input type="text" class="form-control" id="RoomName" placeholder="Enter Room Name" required>
                         </div>
                     </div>
                     <br />
                     <div class="form-group row">
                         <label for="staticEmail" class="col-sm-2 col-form-label" style="font-weight:bold">Location</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="Location" placeholder="Enter Location" required>
+                            <input type="text" class="form-control" id="Location" placeholder="Enter Location" required>
                         </div>
                     </div>
                     <br />
-
                     <div class="form-group row">
                         <label for="staticEmail" class="col-sm-2 col-form-label" style="font-weight:bold">Limit</label>
                         <div class="col-sm-10">
-                            <input type="number" min="0" class="form-control" name="Limit" placeholder="Number of Participants Here" required>
+                            <input type="number" min="0" class="form-control" id="Limit" placeholder="Number of Participants Here" required>
                         </div>
                     </div>
                     <br />
-
                     <div style="float:right">
-                        <input type="submit" class="btn btn-primary" value="Submit">
+                        <input type="button" class="btn btn-primary" value="Submit" id="btnAdd" onclick="Add()">
+                        <button type="button" class="btn btn-primary" id="btnUpdate" style="display:none;" onclick="Update();">Update</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
-
-
-                }
+                </form>
             </div>
-
         </div>
     </div>
 </div>
 
-<html>
-<head>
+<table id="example" class="table table-striped" style="width:100%">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Room</th>
+            <th>Location</th>
+            <th>Limit</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody class="tbody"></tbody>
+</table>
 
-</head>
-<body>
-    <br>
-    <br>
-
-    <table id="example" class="table table-striped" style="width:100%">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Room</th>
-                <th>Location</th>
-                <th>Limit</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ID)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RoomName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Location)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Limit)
-                    </td>
-
-                    <td>
-                        @Html.ActionLink("Edit", "GetById", new { id = item.ID }) |
-                        <a href="@Url.Action("Delete","Venue", new { id = item.ID })" onclick="return confirm('Are you sure you to delete this Record?');"><img src="https://img.icons8.com/ios-filled/24/000000/delete-forever.png" /></a>
-
-                    </td>
-                </tr>
-            }
-        </tbody>
-
-    </table>
-</body>
-<script>
-    $(document).ready(function () {
-        $('#example').DataTable();
-    });
-</script>
-</html>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModals">
-    Launch demo modal
-</button>
+<div>
+    <hr />
+    <button type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal1" style="float:right">
+        Import From AMS
+    </button>
+    <h4>User Management</h4>
+    <hr />
+
+</div>
+
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModals" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog  mw-100 w-75">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel"> Import From AMS </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                @using (Html.BeginForm("GetById", "Venue", FormMethod.Get))
-                {
-                }
+                <table id="example1" class="table table-striped" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Designation</th>
+                            <th>Email</th>
+                            <th>Department</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody1"></tbody>
+                </table>
             </div>
-           
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
         </div>
     </div>
 </div>
+<br /><br />
+<table id="example2" class="table table-striped" style="width:100%">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Designation</th>
+            <th>Email</th>
+            <th>Department</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody class="tbody2"></tbody>
+</table>
+<!-- Modal -->
+@*Crud of Venue*@
+<script>
+    $(document).ready(function () {
+        $('#example2').DataTable();
+        toastr.options.timeOut = 1500; // 1.5s
+        LoadData();
+        LoadUsers();
+        clearTextBox();
+    });
+    function LoadUsers() {
+        $.ajax({
+            url: "https://mocki.io/v1/47d6bde5-cbbf-4788-8066-6feaa4cbb286",
+            type: "GET",
+            contentType: "application/json",
+            dataType: "json",
+            success: function (result) {
+                var html = '';
+                $.each(result, function (key, item) {
+
+                    console.log(result)
+                    debugger
+                    html += '<tr>';
+                    html += '<td>' + item.name + '</td>';
+                    html += '<td>' + item.Designation + '</td>';
+                    html += '<td>' + item.Email + '</td>';
+                    html += '<td>' + item.Department + '</td>';
+                    html += '<td>' + item.name + '</td>';
+                    html += '</tr>';
+                    console.log(item.id)
+                });
+
+                $('.tbody1').html(html);
+                $('#example1').DataTable();
+            },
+            error: function (errormessage) {
+                alert(errormessage.responseText);
+            }
+        });
+
+
+
+    }
+    function LoadData() {
+        $.ajax({
+            url: "http://localhost:52092/api/VenueApi/Get",
+            type: "GET",
+            contentType: "application/json",
+            dataType: "json",
+            success: function (result) {
+                var html = '';
+                $.each(result, function (key, item) {
+
+                    console.log(result)
+                    debugger
+                    html += '<tr>';
+                    html += '<td>' + item.ID + '</td>';
+                    html += '<td>' + item.RoomName + '</td>';
+                    html += '<td>' + item.Location + '</td>';
+                    html += '<td>' + item.Limit + '</td>';
+
+                    html += '<td><i class="fa fa-edit" onclick="return getbyID(' + item.ID + ')" style="font-size:22px;color:#0d6efd"></i> | <i class="fa fa-trash" style="font-size:22px;color:#0d6efd" onclick="Delele(' + item.ID + ')"></i></td>';
+                    html += '</tr>';
+                    console.log(item.id)
+                });
+
+                $('.tbody').html(html);
+                $('#example').DataTable();
+            },
+            error: function (errormessage) {
+                alert(errormessage.responseText);
+            }
+        });
+
+
+
+    }
+    function Add() {
+
+        debugger
+        var Param = {
+            //ID: $('#ID').val(),
+            RoomName: $('#RoomName').val(),
+            Location: $('#Location').val(),
+            Limit: $('#Limit').val()
+        };
+
+        $.ajax({
+            url: "http://localhost:52092/api/VenueApi/Add/" + Param,
+            data: JSON.stringify(Param),
+            type: "POST",
+            contentType: "application/json",
+            dataType: "json",
+            success: function (result) {
+
+                $('#exampleModal').modal('hide');
+                toastr.success('Added Successfully !!');
+                clearTextBox();
+                LoadData();
+            },
+            error: function (errormessage) {
+                console.log(errormessage.responseText);
+            }
+        });
+    }
+    function clearTextBox() {
+        $('#ID').val("");
+        $('#RoomName').val("");
+        $('#Location').val("");
+        $('#Limit').val("");
+        $('#btnUpdate').hide();
+        $('#btnAdd').show();
+
+    }
+    function Delele(ID) {
+        var a = "All"
+        var ans = confirm("Are you sure you want to delete this Record?");
+        if (ans) {
+            debugger
+            $.ajax({
+                url: "http://localhost:52092/Api/VenueApi/Delete/" + ID,
+                type: "DELETE",
+                //contentType: "text/plain",
+                //dataType: "json",
+                success: function (result) {
+                    LoadData();
+                    toastr.info('Deleted Successfully !!');
+                },
+                error: function (errormessage) {
+                    alert(errormessage.responseText);
+                }
+            });
+        }
+    }
+    function getbyID(ID) {
+        debugger
+        $.ajax({
+
+            url: "http://localhost:52092/Api/VenueApi/GetById/" + ID,
+            type: "GET",
+            contentType: "application/json;charset=UTF-8",
+            dataType: "json",
+            success: function (result) {
+                $('#ID').val(result.ID);
+                $('#RoomName').val(result.RoomName);
+                $('#Location').val(result.Location);
+                $('#Limit').val(result.Limit);
+
+
+                $('#exampleModal').modal('show');
+                $('#btnUpdate').show();
+                $('#btnAdd').hide();
+                console.log(result);
+
+            },
+            error: function (errormessage) {
+                alert(errormessage.responseText);
+            }
+        });
+    }
+    function Update() {
+
+        var Param = {
+            ID: $('#ID').val(),
+            RoomName: $('#RoomName').val(),
+            Location: $('#Location').val(),
+            Limit: $("#Limit").val()
+        };
+        console.log(Param)
+        $.ajax({
+            url: "http://localhost:52092/Api/VenueApi/UpdateVenue",
+            data: JSON.stringify(Param),
+            type: "Put",
+            contentType: "application/json;charset=utf-8",
+            dataType: "json",
+            success: function (result) {
+
+                $('#exampleModal').modal('hide');
+                toastr.info('Updated Successfully !!');
+                LoadData();
+                clearTextBox();
+
+            },
+            error: function (errormessage) {
+                alert(errormessage.responseText);
+            }
+        });
+    }
+</script>
