--- a/Testing iMeeting/Views/Venue/Index.cshtml
+++ b/Testing iMeeting/Views/Venue/Index.cshtml
@@ -89,9 +89,11 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <table id="example1" class="table table-striped" style="width:100%">
+                <button type="button" class="btn btn-primary" id="copy" style="float:right">Add Users</button>
+                <table id="MainTbl" class="table table-striped"  style="width:110%">
                     <thead>
                         <tr>
+                            <th>Select</th>
                             <th>Name</th>
                             <th>Designation</th>
                             <th>Email</th>
@@ -103,16 +105,18 @@
                 </table>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >Close</button>
+         
+               
             </div>
         </div>
     </div>
 </div>
-<br /><br />
+<br />
 <table id="example2" class="table table-striped" style="width:100%">
     <thead>
         <tr>
+           <th>Select</th>
             <th>Name</th>
             <th>Designation</th>
             <th>Email</th>
@@ -125,8 +129,18 @@
 <!-- Modal -->
 @*Crud of Venue*@
 <script>
+
+
+
+     $(function(){
+   $(document).on("click","#copy",function(){
+      var getSelectedRows = $("#MainTbl input:checked").parents("tr").clone();
+
+      $("#example2 tbody").append(getSelectedRows);
+  })
+})
     $(document).ready(function () {
-        $('#example2').DataTable();
+       // $('#example2').DataTable();
         toastr.options.timeOut = 1500; // 1.5s
         LoadData();
         LoadUsers();
@@ -145,6 +159,7 @@
                     console.log(result)
                     debugger
                     html += '<tr>';
+                     html += '<td>'  +'<input type="checkbox" />'+ '</td>';
                     html += '<td>' + item.name + '</td>';
                     html += '<td>' + item.Designation + '</td>';
                     html += '<td>' + item.Email + '</td>';
@@ -155,7 +170,7 @@
                 });
 
                 $('.tbody1').html(html);
-                $('#example1').DataTable();
+                $('#MainTbl').DataTable();
             },
             error: function (errormessage) {
                 alert(errormessage.responseText);
