--- a/Testing iMeeting/Views/Shared/_gridForm.cshtml
+++ b/Testing iMeeting/Views/Shared/_gridForm.cshtml
@@ -18,10 +18,10 @@
                 <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
                     <div class="card-header"><b> @item.Title</b></div>
                     <div class="card-body">
-                        <h5 class="card-title">Info card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
                         <i class="fas" style="float:right">
-                            @item.DateTime.Day<br /> @item.DateTime.ToString("MMMM") <br />
+                            @item.DateTime.Day<br /> @item.DateTime.ToString("MMM") <br />
                         </i>
                         <br />
                         @{
