--- a/Testing iMeeting/Views/Account/Login.cshtml
+++ b/Testing iMeeting/Views/Account/Login.cshtml
@@ -41,7 +41,7 @@
                         <input type="submit" class="btn btn-primary" value="Login" Style=" width: 400px;align-self:center" />
                     </div>
                     <br />
-                    @Html.ActionLink("Sign Up", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "btn btn-primary", @Style = " width: 400px;" })
+                    @*@Html.ActionLink("Sign Up", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "btn btn-primary", @Style = " width: 400px;" })*@
                 </div>
                 @* Enable this once you have account confirmation enabled for password reset functionality
             <p>
