--- a/Testing iMeeting/Views/iMeeting/Venue.cshtml
+++ b/Testing iMeeting/Views/iMeeting/Venue.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using iMeeting.DAL
+@model RegisterViewModel
 @{
     ViewBag.Title = "Index";
 }
@@ -71,7 +72,7 @@
 <!-- Button trigger modal -->
 <div>
     <hr />
-    <button type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal1" style="float:right">
+    <button  type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal1" style="float:right">
         Import From AMS
     </button>
     <h4>User Management</h4>
@@ -126,25 +127,30 @@
     </thead>
     <tbody class="tbody2"></tbody>
 </table>
+
 <!-- Modal -->
 @*Crud of Venue*@
 <script>
 
+    //var name;
+    //var email;
+    //var Param;
 
+    //function CopyFromAMS () {
+    //    $(document).on("click", "#copy", function () {
+            
+    //        console.log(Param);
+    //    })
 
-     $(function(){
-   $(document).on("click","#copy",function(){
-      var getSelectedRows = $("#MainTbl input:checked").parents("tr").clone();
+    //})
 
-      $("#example2 tbody").append(getSelectedRows);
-  })
-})
     $(document).ready(function () {
-       // $('#example2').DataTable();
+        // $('#example2').DataTable();
         toastr.options.timeOut = 1500; // 1.5s
         LoadData();
         LoadUsers();
         clearTextBox();
+     
     });
     function LoadUsers() {
         $.ajax({
@@ -156,17 +162,16 @@
                 var html = '';
                 $.each(result, function (key, item) {
 
-                    console.log(result)
-                    debugger
+                    //console.log(result)
+                    //debugger
                     html += '<tr>';
-                     html += '<td>'  +'<input type="checkbox" />'+ '</td>';
+                    html += '<td>' + '<input type="checkbox" />' + '</td>';
                     html += '<td>' + item.name + '</td>';
                     html += '<td>' + item.Designation + '</td>';
                     html += '<td>' + item.Email + '</td>';
                     html += '<td>' + item.Department + '</td>';
                     html += '<td>' + item.name + '</td>';
                     html += '</tr>';
-                    console.log(item.id)
                 });
 
                 $('.tbody1').html(html);
@@ -190,17 +195,16 @@
                 var html = '';
                 $.each(result, function (key, item) {
 
-                    console.log(result)
-                    debugger
+                    //console.log(result)
+                    //debugger
                     html += '<tr>';
                     html += '<td>' + item.ID + '</td>';
                     html += '<td>' + item.RoomName + '</td>';
                     html += '<td>' + item.Location + '</td>';
                     html += '<td>' + item.Limit + '</td>';
-
                     html += '<td><i class="fa fa-edit" onclick="return getbyID(' + item.ID + ')" style="font-size:22px;color:#0d6efd"></i> | <i class="fa fa-trash" style="font-size:22px;color:#0d6efd" onclick="Delele(' + item.ID + ')"></i></td>';
                     html += '</tr>';
-                    console.log(item.id)
+                    //console.log(item.id)
                 });
 
                 $('.tbody').html(html);
@@ -216,7 +220,7 @@
     }
     function Add() {
 
-        debugger
+        // debugger
         var Param = {
             //ID: $('#ID').val(),
             RoomName: $('#RoomName').val(),
@@ -255,7 +259,7 @@
         var a = "All"
         var ans = confirm("Are you sure you want to delete this Record?");
         if (ans) {
-            debugger
+            // debugger
             $.ajax({
                 url: "http://localhost:52092/Api/VenueApi/Delete/" + ID,
                 type: "DELETE",
@@ -272,7 +276,7 @@
         }
     }
     function getbyID(ID) {
-        debugger
+        // debugger
         $.ajax({
 
             url: "http://localhost:52092/Api/VenueApi/GetById/" + ID,
@@ -324,5 +328,46 @@
                 alert(errormessage.responseText);
             }
         });
-    }
+        }
+
+
 </script>
+ 
+    @*<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>*@
+    <script type="text/javascript">
+        $(function () {
+            $("#copy").click(function () {
+                var getSelectedRows = $("#MainTbl input:checked").parents("tr").clone();
+
+            $("#example2 tbody").append(getSelectedRows);
+            console.log(getSelectedRows.length)
+            var name = $(getSelectedRows).find("td")[1].innerHTML;
+            var email = $(getSelectedRows).find("td")[3].innerHTML;
+            console.log(name); console.log(email);
+               var Param = {
+                name: name,
+                email: email
+            };
+                $.ajax({
+                    type: "POST",
+                    url: "/Account/Register",
+                   // data: '{name: "' + name + '" }',
+                    data:JSON.stringify( Param),
+                    contentType: "application/json; charset=utf-8",
+                    dataType: "json",
+                    success: function (response) {
+                        console.log(response);
+                        //alert("Hello: " + response.Name + " .\nCurrent Date and Time: " + response.DateTime);
+                    },
+                    failure: function (response) {
+                            console.log(response);
+                        //alert(response.responseText);
+                    },
+                    error: function (response) {
+                            console.log(response);
+                        //alert(response.responseText);
+                    }
+                });
+            });
+        });
+    </script>
